--- a/P8_E4_lucasblesa.htm
+++ b/P8_E4_lucasblesa.htm
@@ -32,6 +32,6 @@ ante la azul lejanía;<br>
 sol del día, claro día!<br>
 ¡Hermosa tierra de España!<br></p>
 
-<li><a href="P8_E3_lucasblesa.htm">Volver al inicio</a></li>
+<li><a href="index.htm">Volver al inicio</a></li>
 
 </htm>
